# Interpreter

./: .dockerignore  .gitignore  ASTNode__Stack_8c.html  ASTNode__Stack_8c.js  ASTNode__Stack_8h.html  ASTNode__Stack_8h.js  ASTNode__Stack_8h_source.html  CMakeLists.txt  Dockerfile  Doxyfile  README.md  annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_821002d4f10779a80d4fb17bc32f21f1.js  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  example.wlg  expression__eval_8c.html  expression__eval_8c.js  expression__eval_8h.html  expression__eval_8h.js  expression__eval_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  index.js  (+48 more)
.github/workflows/: build-and-deploy-documentation.yml
examples/: example.wlg
examples/bad/: example.wlg  example2.wlg
examples/fixme/: fixme.wlg
examples/good/: example2.wlg
include/: interpreter.h  lexer.h  memory.h  parser.h
include/utils/: ASTNode_Stack.h  expression_eval.h  lexer_utils.h  load_code.h  stack.h
scripts/: Setup.sh  docker_entrypoint.sh
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+22 more)
src/: interpreter.c  lexer.c  lexer_utils.c  main.c  parser.c
test/: CMakeLists.txt
test/interpreter_test/: interpreter_test.c
test/interpreter_test/include/: interpreter_test.h
test/interpreter_test/src/: control_flow.c  interpreter_edge_cases.c  variable_handling.c
test/lexer_test/: lexer_test.c  sample.c
test/lexer_test/include/: lexer_test.h
test/lexer_test/src/: lexer_common_combinations.c  lexer_edge_cases.c  lexer_tokens.c
test/parser_test/: parser_test.c
test/parser_test/include/: parser_test.h
test/parser_test/src/: parser_common_combinations.c  parser_edge_cases.c  parser_expressions.c  parser_scopes.c
test/utils_test/: utils_test.c
test/utils_test/include/: utils_test.h
test/utils_test/src/: expression_eval.c  memory.c
utils/: ASTNode_Stack.c  expression_eval.c  lexer_utils.c  load_code.c  memory.c  stack.c
